--- a/apps/docker_files/docker-compose.yml
+++ b/apps/docker_files/docker-compose.yml
@@ -35,7 +35,7 @@ services:
       - "3000:3000"
     volumes:
       - ./nginx:/etc/nginx/conf.d
-        #      - ./app/wait-for-it.sh:/wait-for-it.sh
+      - ./app/wait-for-it.sh:/wait-for-it.sh
     depends_on:
       - app
 
